module_8/homework_8_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-httpserver
  labels:
    app: app-httpserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-httpserver
  template:
    metadata:
      labels:
        app: app-httpserver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7878"
    spec:
      containers:
      - name: name-httpserver
        image: wncbb/httpserver:v0.0.10
        ports:
        - containerPort: 7878
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo Hello from the postStart handler >> /message.txt"]
              # command: ["/bin/sh", "-c", "sleep 600s"]
          preStop:
            exec: 
              command: ["/bin/sh", "-c", "echo Hello from the postStart handler >> /message.txt"]
        volumeMounts:
        - name: httpserver-company 
          mountPath: /data/
          readOnly: true
        readinessProbe:
          httpGet: 
            path: /healthz
            port: 7878
            httpHeaders:
            - name: vesion 
              value: v0.0.2
          periodSeconds: 5
          initialDelaySeconds: 1
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet: 
            path: /healthz
            port: 7878
            httpHeaders:
            - name: vesion 
              value: v0.0.2
          periodSeconds: 5
          initialDelaySeconds: 1
          failureThreshold: 3
          successThreshold: 1
        resources:
          limits:
            memory: 200Mi
            cpu: 500m
          requests:
            memory: 200Mi
            cpu: 500m
      volumes: 
      - name: httpserver-company
        configMap: 
          name: httpserver-company
      terminationGracePeriodSeconds: 10
