module_8/homework_8_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  selector:
    app: app-httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
