module_8/homework_8_1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: ingress-httpserver
spec:
  ingressClassName: nginx
  rules:
  - host: httpserver.io
    http:
      paths:
      - backend:
          service:
            name: httpserver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - httpserver.io
      secretName: httpserver.io
